# binapi

./: .gitignore  README.md  accinfo.json
examples/asynchronous-user_data/: main.cpp
examples/synchronous-user_data/: CMakeLists.txt  main.cpp
examples/websockets/: CMakeLists.txt
include/binapi/: types.hpp
logger/: CMakeLists.txt  main.cpp
order_book/: main.cpp
src/: types.cpp  websocket.cpp
testnet/: CMakeLists.txt  main.cpp
user_state/: CMakeLists.txt  main.cpp
